--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversation Starter</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>💬 Conversation Starter</h1>
-        <div id="promptBox" class="prompt-box">Click the button to begin!</div>
-        <button id="newBtn">New Question</button>
+    <div id="body-page">
+        <div class="container">
+            <h1>💬 Conversation Starter</h1>
+            <div id="promptBox" class="prompt-box">Click the button to begin!</div>
+            <button id="newBtn">New Question</button>
+        </div>
     </div>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
+<footer>
+    <hr>
+    Author: @Olsonm81
+    <br>  
+    &copy; 2025 copyright reserved
+</footer>
+
 </html>
